--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,9 +13,6 @@ setw -g allow-rename off
 setw -g automatic-rename off
 setw -g aggressive-resize on
 
-# Change prefix key to C-a, easier to type, same to "screen"
-unbind C-b
-set -g prefix C-a
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
@@ -27,36 +24,6 @@ setw -g pane-base-index 1
 
 # Enable mouse support
 set -g mouse on
-
-
-# ==========================
-# ===   Key bindings     ===
-# ==========================
-
-# Unbind default key bindings, we're going to override
-unbind "\$" # rename-session
-unbind ,    # rename-window
-unbind %    # split-window -h
-unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
-unbind [    # paste-buffer
-unbind ]    
-unbind "'"  # select-window
-unbind n    # next-window
-unbind p    # previous-window
-unbind l    # last-window
-unbind M-n  # next window with alert
-unbind M-p  # next window with alert
-unbind o    # focus thru panes
-unbind &    # kill-window
-unbind "#"  # list-buffer 
-unbind =    # choose-buffer
-unbind z    # zoom-pane
-unbind M-Up  # resize 5 rows up
-unbind M-Down # resize 5 rows down
-unbind M-Right # resize 5 rows right
-unbind M-Left # resize 5 rows left
 
 
 # Edit configuration and reload
@@ -95,9 +62,9 @@ bind L command-prompt -p "Link window from (session:window): " "link-window -s %
 
 # Swap panes back and forth with 1st pane
 # When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind \ if '[ #{pane_index} -eq 1 ]' \
-     'swap-pane -s "!"' \
-     'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
+#bind \ if '[ #{pane_index} -eq 1 ]' \
+#     'swap-pane -s "!"' \
+#     'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
 # Kill pane/window/session shortcuts
 bind x kill-pane
